--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -44,16 +44,8 @@
                 <div class="container-row flex-row gap-2">
                     <div class="containerNotifyChat flex flex-row gap-2">
                         <div class="notificacoes" id="notificacoes">
-                            <button class="btnNotificacoes btn btn-gray"><ion-icon name="notifications-outline"
+                            <button id="btnNotificacoes" class="btnNotificacoes btn btn-gray"><ion-icon name="notifications-outline"
                                     style="color: var(--white); font-size: 25px;"></ion-icon>
-                            </button>
-                        </div>
-                        <div class="linhaDivisoria"></div>
-                        <div class="chat">
-                            <button class="btn btn-gray" onclick="window.location.href='/chat'"
-                                style="position: relative;"><ion-icon name="chatbubbles-outline"
-                                    style="color: var(--white); font-size: 25px; position: relative;"></ion-icon>
-
                                 <span id="badge-mensagens" style="
                                     position: absolute;
                                     bottom: 2px;
@@ -70,6 +62,13 @@
                                     font-weight: initial;
                                     z-index: 2;
                                 "></span>
+                            </button>
+                        </div>
+                        <div class="linhaDivisoria"></div>
+                        <div class="chat">
+                            <button class="btn btn-gray" onclick="window.location.href='/chat'"
+                                style="position: relative;"><ion-icon name="chatbubbles-outline"
+                                    style="color: var(--white); font-size: 25px; position: relative;"></ion-icon>
                             </button>
                         </div>
                     </div>
