criação de propostas corrigindo funcionalidades

--- a/views/proposals/create/create_proposals.ejs
+++ b/views/proposals/create/create_proposals.ejs
@@ -175,5 +175,7 @@
         </section>
     </div>
     <script type="module" src="/js/proposals/criarPropostaSections.js"></script>
+      <script type="module" src="js/proposals/create_proposals/proposals.js" defer></script>
+
 </body>
 </html>
