--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -138,7 +138,7 @@
     }
 
     .navbar.transparent-bg {
-        background-color: transparent;
+        background-color: var(--gray-100);
         box-shadow: inset 0 -200px 10px rgba(0, 0, 0, 0.1);
     }
 
