centralizando o erro do Yago

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -38,6 +38,7 @@
                 <div class="mobile-only w-full flex-col gap-2">
                     <a href="/notification"><button class="btn btn-gray w-full">Notificações</button></a>
                     <a onclick="window.location.href='/chat'"><button class="btn btn-gray w-full">Chat</button></a>
+                    <a onclick="window.location.href='/settings'"><button class="btn btn-gray w-full">Configurações</button></a>
                     <a href="/notification"><button class="btn btn-gray w-full">Meu Perfil</button></a>
                     <button class="btn btn-danger w-full">Sair</button>
                 </div>
