--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
     </section>
 
 
-
+<!-- Cavalo -->
     <div class="modal-overlay" id="modal">
         <div class="floating-island" id="floatingIsland">
             <div class="island-content">
