--- a/views/register/contractor/contratante.ejs
+++ b/views/register/contractor/contratante.ejs
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="/css/cadastro/contratante.css">
 <section class="section-2">
-
+    <a href="/register" style="position: absolute; left: 20; top: 20;"><button class="btn btn-primary" style="width: 20px; height: 40px; border-radius: 50px"><</button></a>
     <div class="banner"></div>
 
     <div class="conteudo">
