--- a/views/register/freelancer/freelancer.ejs
+++ b/views/register/freelancer/freelancer.ejs
@@ -9,6 +9,7 @@
 <body>
 
     <section class="section-3">
+        <a href="/register" style="position: absolute; left: 20; top: 20;"><button class="btn btn-primary" style="width: 20px; height: 40px; border-radius: 50px"><</button></a>
         <div class="banner">
 
         </div>
