--- a/views/register/register.ejs
+++ b/views/register/register.ejs
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="/css/cadastro/login.css">
 <section class="section-1">
+    <a href="/" style="position: absolute; left: 20; top: 20;"><button class="btn btn-primary" style="width: 20px; height: 40px; border-radius: 50px"><</button></a>
+
     <div class="banner">
         <div class="slogan">
             <h3>Onde iniciantes se tornam</h3>
