--- a/views/projects/create_project/create_project.ejs
+++ b/views/projects/create_project/create_project.ejs
@@ -164,7 +164,7 @@
     <div
         class="top flex flex-row flex items-center pd-b-2 border-b border-t-0 border-r-0 border-l-0 mg-b-2 border-solid border-gray">
         <h1 class="text-xl flex flex-1 mg-0 text-white">Adicionar componente</h1>
-        <button id="close" class="closemodal" style="background-color: var(--background); border: 0px;"><ion-icon
+        <button id="close" class="closemodal" style="background-color: var(--gray-75); border: 0px;"><ion-icon
                 name="close-outline" size="large"></ion-icon></button>
     </div>
     <div class="content">
