--- a/public/css/components/footer.css
+++ b/public/css/components/footer.css
@@ -3,7 +3,7 @@ body {
 }
 
 .footer {
-    background-color: var(--darkgray);
+    background: var(--gray-100);
     color: var(--white);
     display: flex;
     flex-direction: row;
