--- a/public/css/proposals/partials/filters.css
+++ b/public/css/proposals/partials/filters.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid var(--gray-50);
+    background: var(--gray-50);
 }
 
 .filtro h2 {
