--- a/views/base.ejs
+++ b/views/base.ejs
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%-title%></title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/icon.ico">
-    <link rel="stylesheet" href="/css/components/background.css">
     <link rel="stylesheet" href="/css/components/nav.css">
     <link rel="stylesheet" href="/css/components/footer.css">
     <link rel="stylesheet" href="/css/globals/globals.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <script src="/js/theme.js"></script>
 
 </head>
 
